[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/header_ninePatch.png" type="Texture" id=2]
[ext_resource path="res://assets/bg_ninePatch.png" type="Texture" id=3]
[ext_resource path="res://assets/header_bg.png" type="Texture" id=4]
[ext_resource path="res://assets/MinecraftRegular-Bmg3.otf" type="DynamicFontData" id=5]
[ext_resource path="res://src/create/SequencedAssembly/elements/ResultItemsWindow.gd" type="Script" id=6]
[ext_resource path="res://assets/closeBtnFrames.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 25, 0, 25, 25 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 25, 25 )

[node name="ResultItemsWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="allignmentH" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dud" type="Control" parent="allignmentH"]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="allignmentV" type="HBoxContainer" parent="allignmentH"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="dud" type="Control" parent="allignmentH/allignmentV"]
margin_right = 32.0
margin_bottom = 536.0
rect_min_size = Vector2( 32, 0 )
size_flags_vertical = 3

[node name="MainFrame" type="Control" parent="allignmentH/allignmentV"]
margin_left = 32.0
margin_right = 992.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="allignmentH/allignmentV/MainFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titlebar" type="HBoxContainer" parent="allignmentH/allignmentV/MainFrame/VBoxContainer"]
margin_right = 960.0
margin_bottom = 25.0
custom_constants/separation = 0

[node name="Titlebar" type="NinePatchRect" parent="allignmentH/allignmentV/MainFrame/VBoxContainer/titlebar"]
margin_right = 935.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
draw_center = false
region_rect = Rect2( 0, 0, 16, 10 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="allignmentH/allignmentV/MainFrame/VBoxContainer/titlebar/Titlebar"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="allignmentH/allignmentV/MainFrame/VBoxContainer/titlebar/Titlebar"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Results:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseBtn" type="TextureButton" parent="allignmentH/allignmentV/MainFrame/VBoxContainer/titlebar"]
margin_left = 935.0
margin_right = 960.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 0 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
texture_disabled = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainFrame" type="Control" parent="allignmentH/allignmentV/MainFrame/VBoxContainer"]
margin_top = 25.0
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="allignmentH/allignmentV/MainFrame/VBoxContainer/MainFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
draw_center = false
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="allignmentH/allignmentV/MainFrame/VBoxContainer/MainFrame/NinePatchRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dud2" type="Control" parent="allignmentH/allignmentV"]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 536.0
rect_min_size = Vector2( 32, 0 )
size_flags_vertical = 3

[node name="dud2" type="Control" parent="allignmentH"]
margin_top = 568.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 32 )

[connection signal="pressed" from="allignmentH/allignmentV/MainFrame/VBoxContainer/titlebar/CloseBtn" to="." method="Close"]
